--- a/templates/driver.html
+++ b/templates/driver.html
@@ -63,7 +63,7 @@
 
   <div class="card p-4">
     <h5 class="mb-3">Check In / Check Out</h5>
-    <form action="/driver" method="post">
+    <form action="/" method="post">
       <div class="mb-3">
         <label for="driver" class="form-label">Driver Name</label>
         <select name="driver" id="driver" class="form-select" required>
@@ -81,7 +81,7 @@
 
   <div class="card p-4">
     <h5 class="mb-3">Submit Expense</h5>
-    <form action="/upload" method="post" enctype="multipart/form-data">
+    <form action="/" method="post" enctype="multipart/form-data">
       <div class="mb-3">
         <label for="driver_expense" class="form-label">Driver Name</label>
         <select name="driver" id="driver_expense" class="form-select" required>
